--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
                 <br>
                 <label for=""> INSIRA AQUI SEU CEP ->
                     <input type="text" name="cep" placeholder=" " id="cep">
-                    <button type="submit" id="buscar" onclick="">BUSCAR</button>
+                    <button type="button" onclick='consultarCep()'>Consultar</button>
+                    <label id="resposta"></label>
                 </label>
 
                 <br><br>
                 <label for=""> Endereço   </label>
-                <input type="text" name="" placeholder=" " id="field" style="width: 100px;">
-                <label for="">Número </label>
-                <input type="text" name="" placeholder=" " id="field" style="width: 100px;">
+                <input type="text" name="" placeholder=" " id="logradouro">
+
                 <label for="">  Bairro   </label>
-                <input type="text" name="" placeholder=" " id="field" style="width: 100px;">
+                <input type="text" name="" placeholder=" " id="bairro">
 
                 <br><br>
                 <label for=""> Cidade</label>
-                <input type="text" name="" placeholder=" " id="field" style="width: 80%;">
-                <br><br>
+                <input type="text" name="" placeholder=" " id="localidade">
+
                 <label for="">Estado </label>
-                <input type="text" name="" placeholder=" " id="field" style="width: 80%;">
+                <input type="text" name="" placeholder=" " id="uf">
 
                 <br>
 
             </form>
         </div>
         <br>
-        <div class="checkout">
+        <div class="checkout ">
             <h1>Seu endereço:</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel quas ratione culpa voluptatibus repudiandae ab ullam tenetur itaque non tempora unde alias, quam nemo quidem modi voluptates, illo vero architecto!</p>
         </div>
         <footer>Desenvolvido por
-            <a href="https://github.com/beathedev">Beatriz Francisconi</a>
+            <a href="https://github.com/beathedev ">Beatriz Francisconi</a>
         </footer>
     </section>
 </body>
-<script src="script.js"></script>
+<script src="script.js "></script>
 
 </html>
