--- a/index.html
+++ b/index.html
@@ -19,35 +19,33 @@
         <div class="form-div">
             <form action="" id="formulario">
                 <br>
-                <label for=""> INSIRA AQUI SEU CEP ->
+                <label for=""> Digite seu CEP ->
                     <input type="text" name="cep" placeholder=" " id="cep">
                     <button type="button" onclick='consultarCep()'>Consultar</button>
-                    <label id="resposta"></label>
+                    <br><label id="resposta"></label>
                 </label>
 
-                <br><br>
-                <label for=""> Endereço   </label>
-                <input type="text" name="" placeholder=" " id="logradouro">
+                <div id="hidden-show" style="display: none;">
+                    <br><br>
+                    <label for=""> Rua   </label>
+                    <input type="text" name="" placeholder=" " id="logradouro">
 
-                <label for="">  Bairro   </label>
-                <input type="text" name="" placeholder=" " id="bairro">
+                    <label for="">  Bairro   </label>
+                    <input type="text" name="" placeholder=" " id="bairro">
 
-                <br><br>
-                <label for=""> Cidade</label>
-                <input type="text" name="" placeholder=" " id="localidade">
+                    <br><br>
+                    <label for=""> Cidade</label>
+                    <input type="text" name="" placeholder=" " id="localidade">
 
-                <label for="">Estado </label>
-                <input type="text" name="" placeholder=" " id="uf">
+                    <label for="">Estado </label>
+                    <input type="text" name="" placeholder=" " id="uf">
 
-                <br>
-
+                    <br>
+                </div>
             </form>
         </div>
         <br>
-        <div class="checkout ">
-            <h1>Seu endereço:</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel quas ratione culpa voluptatibus repudiandae ab ullam tenetur itaque non tempora unde alias, quam nemo quidem modi voluptates, illo vero architecto!</p>
-        </div>
+
         <footer>Desenvolvido por
             <a href="https://github.com/beathedev ">Beatriz Francisconi</a>
         </footer>
